--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -8,7 +8,7 @@
             "versionNumber": "0.1.0.NEXT"
         }
     ],
-    "namespace": "",
+    "namespace": "Charm",
     "sfdcLoginUrl": "https://login.salesforce.com",
     "sourceApiVersion": "51.0",
     "packageAliases": {
